Need CXXFLAGS to be O0 other we get boost regex linking errors boost::re_detail::cpp_regex_traits_implementation<char>::transform_primary[a    bi:cxx11](char const*, char const*) const'

--- a/thrift/configure.ac
+++ b/thrift/configure.ac
@@ -57,6 +57,8 @@ AC_SUBST([PY_RUN_ENV])
 AC_ARG_VAR([DMD_LIBEVENT_FLAGS], [DMD flags for linking libevent (auto-detected if not set).])
 AC_ARG_VAR([DMD_OPENSSL_FLAGS], [DMD flags for linking OpenSSL (auto-detected if not set).])
 
+CFLAGS = "-g -O0"
+
 AC_PROG_CC
 AM_PROG_CC_C_O
 AC_PROG_CPP
